<resources>
    <string name="app_name">iWater Logistic</string>
    <string name="company_id">ID</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="login_button">Войти</string>
    <string name="history">История</string>
    <string name="orders">Заказы</string>
    <string name="waysList">Путевые листы</string>
    <string name="currentOrders">Плановые заказы</string>
    <string name="currentWayList">Текущий лист</string>
    <string name="complitOrders">Выполненные заказы</string>
    <string name="complitWayLists">Выполненные листы</string>
    <string name="ApiGoogleMapKey">AIzaSyCOfJNzyHVWg8Ru0naTMQrbP9ECERZokTg</string>
    <string name="dataNotCorrect">Введены некорректные данные. Попробуйте ввести данные снова</string>
    <string name="unknownError">Неизвестная ошибка</string>
    <string name="CheckInternet">Нет доступа к Интернету. Проверьте подключение к Wi-Fi или сотовой сети и повторите попытку.</string>
    <string name="CheckServer">Сервер временно не доступен. Повторите попытку позже</string>
    <string name="companyIdError">Вы не заполнили поле ID компании</string>
    <string name="loginError">Вы не заполнили поле Логин</string>
    <string name="passwordError">Вы не заполнили поле Пароль</string>
    <string name="titleNotifications">История уведомлений</string>
    <string name="titleOrders">Список заказов</string>
    <string name="titleWayLists">Путевые листы</string>
    <string name="makeCall">Звонок клиенту. Выберите номер телефона</string>
    <string name="explanation">Данная функция необходима для совершения звонка Вашему клиенту, когда это Вам необходимо. Если запретить приложению осуществлять звонок, то данная функция будет недоступна.</string>
    <string name="explanationGPS">Без функции \'Местоположение\' не возможно будет отгрузить заказ</string>
    <string name="navigator">Вы можете включить данную функцию в Настройках вашего устройства</string>
    <string name="confirmLogout">Вы уверены, что хотите выйти из своего аккаунта?</string>
    <string name="lookAtMap"><u>Посмотреть на карте</u></string>
    <string name="confirmOrder">Отгрузить Заказ</string>
    <string name="confirmOrderYes">Отгрузил Заказ</string>
    <string name="confirmOrderNo">Не отгрузил заказ</string>
    <string name="aboutOrder">Карточка заказа</string>
    <string name="map">Карта</string>
    <string name="shipmentData">Данные отгрузки</string>
    <string name="title_activity_maps">Map</string>
    <string name="note">Примечания к заказу:</string>
    <string name="payment">Оплата</string>
    <string name="paymentOn">Картой</string>
    <string name="paymentOff">Наличными</string>
    <string name="tanks">Кол-во бутылок к возврату</string>
    <string name="ordersActive">Невыполненные заказы</string>
    <string name="ordersAreAbsent">Нет невыполненных заказов</string>
    <string name="completeOrdesAreAbsent">Нет выполненных заказов</string>
    <string name="returnToCurrent">Вернуться к текущему путевому листу</string>
    <string name="emptyField">Укажите вид оплаты и Количество бутылок к возврату</string>
    <string name="checkGPS">Включите \'Местоположение\' в настройках своего устройства</string>
    <string name="confirm">Вы точно хотите отгрузить этот заказ?</string>
    <string name="tryAttempt">Повторить попытку</string>
    <string name="noInternet">Нет доступа к Интернету. Данный заказ поставлен в очередь</string>
    <string name="noServer">Сервер временно не доступен. Данный заказ будет отправлен повторно</string>
    <string name="arePerforming">Выполняются…</string>
    <string name="noCurOrders">Нет заказов</string>
    <string name="noWayBill">Нет путевых листов</string>
    <string name="noNotifications">Нет уведомлений</string>
    <string name="noCoords">Не удалось зафиксировать Ваше местоположение. Попробуйте отгрузить заказ снова</string>
    <string name="mapLabel">Карта</string>
    <string name="errorAccept">Возникла ошибка при отгрузке заказа</string>
    <string name="goToSettings">Для нормальной работы приложения требуется разрешение на работу в фоновом режиме. Его можно включить в настройках Вашего устройства. Перейти в настройки?</string>
    <string name="cash">Наличные</string>
    <string name="terminal">Терминал</string>
    <string name="transfer">Перевод</string>
    <string name="on_site">на сайте</string>
    <string name="general_map_text">Общая карта</string>
    <string name="completeOrder">Завершённые заказы</string>
    <string name="callClient">Звонок клиенту</string>
    <string name="Copy_address">Скопировать адрес в буфер обмена</string>
</resources>
