<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.fragments.FragmentOrders">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="60dp">

        <TextView
            android:id="@+id/textView"
            style="@style/Orders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/currentOrders" />

        <LinearLayout
            android:id="@+id/current"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/noCurOrders"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:visibility="gone" />
        </LinearLayout>

        <TextView
            android:id="@+id/cash"
            style="@style/Orders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/arePerforming"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textView5"
            style="@style/Orders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/complitOrders" />

        <LinearLayout
            android:id="@+id/complete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/completeListOrder"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/noCurOrders"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>