<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.fragments.FragmentWayLists">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/Orders"
                android:id="@+id/textViewW"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/currentWayList" />

            <LinearLayout
                android:id="@+id/currentWayList"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/currentList"
                    android:layout_width="match_parent"
                    android:gravity="center_vertical"
                    android:layout_height="50dp"
                    android:background="@drawable/press_blue_row"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/wayListsText"
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:src="@drawable/blue_arrow" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                style="@style/Orders"
                android:id="@+id/textViewW1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/complitWayLists"
                android:visibility="gone"/>

            <LinearLayout
                android:id="@+id/completeWayLists"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView28"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:text="@string/noWayBill"
                    android:visibility="gone"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>